# MBusPico

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  options.cmake  options.ini  pico_sdk_import.cmake
.github/: dependabot.yml
.github/workflows/: release.yml
3d/: case.123dx  case_base.stl  case_top.stl  case_v2.123dx  case_v2_base.stl  case_v2_top.stl
FreeRTOS/: FreeRTOSConfig.h  freertos_port.c  threading_alt.h
dep/: CMakeLists.txt
dep/web/: config.html  config.js  create_raw_res.sh
dep/web/include/: bootstrap_bundle_min_js.raw.h  bootstrap_min_css.raw.h  config_html.raw.h  config_js.raw.h  web_res.h
dep/web/raw/: bootstrap_bundle_min_js.raw.c  bootstrap_min_css.raw.c  config_html.raw.c  config_js.raw.c
docker/: Dockerfile  picosdk-build.Dockerfile  python-run.Dockerfile
include/: conf.h.in  lwipopts.h  mbedtls_config.h  mbus-rpi.conf.h.in  mbus-rpi.h  mbus_device.h  mbuspi.conf.h.in  mbuspi.h  mbuspico.conf.h.in  mbuspico.h  mongoose_custom.h
loxone/: README.md  VIU_MBusPico.xml  VI_MBusPico.xml
openocd/: build-openocd-win.sh  pico-swd.cfg
python/: build_micropython.sh  config.py  main.py  micropython_with_AES-CTR_v1.20.0.uf2
python/mbus/: meterdata.py  serial.py
python/mbus/devices/: __init__.py  _mbusdevice.py  kaifa_ma309m_netznoe.py
python/provider/: microdot_asyncio.py  udp.py  www.py
src/: fs.c  http.c  http.cpp  main.c  main.cpp  mbuspi.c  mbuspi.cpp  mbuspico.c  uart.c  uart.cpp  udp.c  udp.cpp  wifi.c  wifi.cpp
src/devices/: kaifa_ma309m.c  kaifa_ma309m.cpp  kaifa_ma309m_EVN.c
src/net/: dhcpserver.c  dhcpserver.h  dnsserver.c
